# mecca

airdrop/backend/: .env.example  .gitignore  package.json  pnpm-lock.yaml  service.txt
app/: deploy.bash  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: App.css  App.tsx  global.css  main.tsx
app_admin/: deploy.bash  deploy.sh  package.json  pnpm-lock.yaml  tsconfig.json
app_admin/src/: App.css  App.tsx  main.tsx  wallet_wrapper.tsx
game/backend/: .env.example  .gitignore  go.mod  go.sum  main.go  service.txt  service_data.txt
game/bot_backend/: app.js  package-lock.json  package.json  pnpm-lock.yaml  service.txt
ico/app/: package.json  pnpm-lock.yaml
ico/backend/: .env  .gitignore  (+3 more)
ico/contracts/: Cargo.toml  contracts-keypair.json  dep.json  dep1.json
ico/contracts/src/: lib.rs  process.rs
ico/contracts/src/instructions/: init_state.rs  mod.rs  purchase.rs  update_config.rs  update_owner.rs  update_round.rs  withdraw_tokens.rs
ico/contracts/src/state/: app_config.rs  app_state.rs  mod.rs  sale_data.rs  token_store.rs
multilevel/contracts/: Cargo.toml
multilevel/contracts/src/: process.rs
multilevel/contracts/src/instructions/: distribute_referral_rewards.rs  join.rs  mod.rs  upgrade_plan.rs  withdraw.rs
multilevel/contracts/src/instructions/owner/: mod.rs  update_owner.rs  update_state.rs
multilevel/contracts/src/instructions/pda_validator/: mod.rs
multilevel/contracts/src/state/: action.rs  app_state.rs  app_store.rs  mod.rs  plan.rs  reward.rs  token_store.rs  user.rs
staking/: package.json
(+344 files in other folders)
