[package]
name = "contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.3"
rand = "0.8.5"
borsh-derive = "1.5.3"
solana-program = "2.1.6"
spl-token-2022 = { version="6.0.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version="6.0.0", features = [ "no-entrypoint" ] }

[lib]
crate-type = ["cdylib", "lib"]